--- a/biscuits/src/main/resources/application.properties
+++ b/biscuits/src/main/resources/application.properties
@@ -13,3 +13,11 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 biscuits.app.jwtSecret=biscuitsSecretKey
 biscuits.app.jwtExpiration=86400
 
+# Enabling H2 Console
+spring.h2.console.enabled=true
+
+## DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testDB;DB_CLOSE_ON_EXIT=FALSE;
+spring.datasource.username=sa
+spring.datasource.password=
