working on kid back-end

--- a/biscuits/src/main/resources/application.properties
+++ b/biscuits/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Postgresql settings
-spring.datasource.url=jdbc:postgresql://localhost:5432/authenticationtest
+spring.datasource.url=jdbc:postgresql://localhost:5432/biscuits
 spring.datasource.username=postgres
 spring.datasource.password=root
 spring.datasource.initialization-mode=always
