--- a/biscuits/src/main/resources/application.properties
+++ b/biscuits/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.initialization-mode=always
 
 #JPA settings
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
 
 # App Properties
@@ -16,8 +16,8 @@ biscuits.app.jwtExpiration=86400
 # Enabling H2 Console
 spring.h2.console.enabled=true
 
-## DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:testDB;DB_CLOSE_ON_EXIT=FALSE;
-spring.datasource.username=sa
-spring.datasource.password=
+### DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:testDB;DB_CLOSE_ON_EXIT=FALSE;
+#spring.datasource.username=sa
+#spring.datasource.password=
