--- a/biscuits/src/main/biscuits-ui/package.json
+++ b/biscuits/src/main/biscuits-ui/package.json
@@ -25,6 +25,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.5.0",
     "@fortawesome/free-regular-svg-icons": "^5.5.0",
     "@fortawesome/free-solid-svg-icons": "^5.5.0",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bulma": "^0.7.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
